assets/css/style.css
html,
body {
    width: 100%;
    font-family: 'Poppins';
}

#mainNav {
    min-height: 65px;
    background-color: #fff;
    text-transform: uppercase;
    color: #51624E;
}

#mainNav .navbar-toggler {
    padding: 0.75rem;
    color: #51624E;
    border: 1px solid #33705e;
}

#mainNav .navbar-brand {
    font-weight: 700;
    padding: .9rem 0;
    color: #51624E;
}

.navbar-brand, .nav-item {
    font-size: 1.3rem;
    text-shadow: 0 0 1px #18352c;
}

#mainNav .navbar-nav .nav-item:hover {
    color: #51624E;
    outline: none;
    background-color: transparent;
}

@media (min-width: 540px) {
    #mainNav {
        border-color: transparent;
        background-color: #fff;
        transition: background-color 0.3s ease-in-out;
    }

    #mainNav .nav-link {
        -webkit-transition: none;
        transition: none;
        padding: 2rem 1.5rem;
    }

    #mainNav .nav-link:hover {
        color: #51624E;
    }

    #mainNav .nav-link:active {
        color: #51624E;
    }

    #mainNav.navbar-shrink {
        background-color: #fff;
    }

    #mainNav.navbar-shrink .navbar-brand {
        color: #51624E;
    }

    #mainNav.navbar-shrink .nav-link {
        color: #51624E;
        padding: 1.5rem 1.5rem 1.25rem;
        border-bottom: 0.25rem solid transparent;
    }

    #mainNav.navbar-shrink .nav-link:hover {
        color: #51624E;
    }

    #mainNav.navbar-shrink .nav-link:active {
        color: #51624E;
    }

    #mainNav.navbar-shrink .nav-link.active {
        color: #51624E;
        outline: none;
        border-bottom: 0.25rem solid #51624E;
    }
}

@media (max-width: 540px) {
    .navbar-brand, .nav-item {
        font-size: 2rem;
    }
}

.hidden {
    display: none;
}

header.masthead {
    padding-top: 10rem;
    padding-left: 20%;
    height: 100vh;
    background-color: #D1E1CE;
    background-position: center center;
    background-size: cover;
}

.masthead h1 {
    font-size: 3rem;
    text-shadow: 1px 1px 3px #000;
}

.masthead h3 {
    font-size: 2rem;
    padding-left: 1%;
}

.bg-primary, .bg-dark, .bg-mid {
    padding: 3rem;    
}

.bg-primary {
    background-color: #E9EFE7 !important;
}

.bg-dark {
    background-color: #6b8a64 !important;
}

.bg-mid {
    background-color: #465343 !important;
}

.section {
    height: 100vh;
    background-position: center center;
    background-size: cover;
}

.section-heading {
    text-shadow: 1px 1px 1px #000;
    margin-top: 5rem;
    font-family: 'League Spartan', sans-serif;
    font-weight: 600;
}

@media (min-width: 992px) {
#about{
    height: 100vh;
}
}

@media (min-width: 540px) {
#profilepic {
    margin-top: 5rem;
}

#portfolioCarousel {
    height: 30rem;
}

#gallery {
    max-height: 30rem;
    padding-bottom: 10rem;
}

.carousel-caption {
    margin-top: 5rem;
}
}

@media (max-width: 540px) {
    #learnmore,
    #profilepic {
        margin-top: 5rem;
    }

    #biotext {
        font-size: 95%;
    }
    .card-deck {
        width: auto;
        font-size: 90%;
    }

    #portfolioCarousel {
        height: 30rem;
    }
    
    #gallery {
        max-height: 30rem;
        padding-bottom: 15rem;
    }
    
    .carousel-caption {
        margin-top: 5rem;
    }
}

#portfolio {
    height: 100vh;
}

a.portfolio-box {
    color: #fff;
    text-decoration: none;
}

a {
    text-decoration: none;
    font-weight: 600;
}

